--- a/templates/base.html
+++ b/templates/base.html
@@ -46,8 +46,7 @@
                                 <i class="bi bi-info-circle me-1"></i> Информация
                             </a>
                             <ul class="dropdown-menu dropdown-menu-dark">
-                                <li><a class="dropdown-item" href="#"><i class="bi bi-truck me-2"></i>Доставка и оплата</a></li>
-                                <li><a class="dropdown-item" href="#"><i class="bi bi-telephone me-2"></i>Контакты</a></li>
+                                <li><a class="dropdown-item" href="{% url 'main:index' %}"><i class="bi bi-telephone me-2"></i>Контакты</a></li>
                                 <li><a class="dropdown-item" href="{% url 'main:about' %}"><i class="bi bi-people me-2"></i>О нас</a></li>
                             </ul>
                         </li>
