--- a/main/templates/main/footer.html
+++ b/main/templates/main/footer.html
@@ -42,7 +42,7 @@
             </div>
             
             <div class="d-flex gap-3">
-                <a href="https://stepik.org/users/714567549/" class="social-btn google-btn">
+                <a href="https://stepik.org/users/714567549/" class="social-btn stepik-btn">
                     <img src="{% static 'deps/icons/stepik-white.svg' %}" alt="Stepik" width="24" height="24">
                 </a>
                 <a href="https://t.me/raiserror" class="social-btn telegram-btn">
