--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -46,14 +46,14 @@
         <div class="social-auth text-center">
             <p class="text-muted mb-3">Или войдите через</p>
             <div class="d-flex justify-content-center gap-3">
-                <a href="#" class="social-btn google-btn">
-                    <img src="{% static 'deps/icons/google.svg' %}" alt="Google" width="24" height="24">
+                <a href="#" class="social-butn google-btn">
+                    <img src="{% static 'deps/icons/google-black.svg' %}" alt="Google" width="24" height="24">
                 </a>
-                <a href="https://t.me/raiserror" class="social-btn telegram-btn">
+                <a href="https://t.me/raiserror" class="social-butn telegram-btn">
                     <img src="{% static 'deps/icons/telegram.svg' %}" alt="Telegram" width="24" height="24">
                 </a>
-                <a href="https://github.com/raiserror" class="social-btn github-btn">
-                    <img src="{% static 'deps/icons/github.svg' %}" alt="GitHub" width="24" height="24">
+                <a href="https://github.com/raiserror" class="social-butn github-btn">
+                    <img src="{% static 'deps/icons/github-black.svg' %}" alt="GitHub" width="24" height="24">
                 </a>
             </div>
         </div>
